--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -148,9 +148,7 @@ O5 </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 12<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P1 (from slide 61), P2</span><br>
-      </div>
+      <div style="text-align: center;">Lectures P1, P2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 13<br>
@@ -169,7 +167,10 @@ P1 (from slide 61), P2</span><br>
 18<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 19&nbsp;</td>
+ valign="top">Feb 19 <br>
+      <div style="text-align: center;">Lectures P2, P3<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 20<br>
       </td>
@@ -179,13 +180,17 @@ P1 (from slide 61), P2</span><br>
 23<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 24 </td>
+ valign="top">Feb 24<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P3 (from slide 13)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 25</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 26<br>
       <div style="text-align: center;">Midterm Exam<br>
-(Overview unit, Lecs P1-?)<br>
+(Overview unit, Lecs P1-P2)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
@@ -354,6 +359,7 @@ Lab 3 (by 5 PM)</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0">May
 5<br>
       <div style="text-align: center;">Final Exam, 1215 PM<br>
+(Lecs P3-P5, ?)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0">May
