--- a/teaching/cs426/textFiles/calendar.htm
+++ b/teaching/cs426/textFiles/calendar.htm
@@ -181,9 +181,7 @@ O5 </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Feb 24<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P3 (from slide 13)</span><br>
-      </div>
+      <div style="text-align: center;">Review, Lecture P3 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 25</td>
@@ -205,6 +203,9 @@ Last Withdrawal Day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 3<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P3 (from slide 28)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Mar
 4<br>
